backend-services/usm-accounts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usm-accounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usm-accounts
  template:
    metadata:
      labels:
        app: usm-accounts
    spec:
      containers:
        - name: usm-accounts-ctr
          image: 5927055/usm-accounts:a44deda
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: usm-accounts-service
spec:
  ports:
  - port: 80
    targetPort: 8100
  selector:
    app: usm-accounts
