backend-services/usm-discovery.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: eureka-np
#   labels:
#     app: eureka
# spec:
#   type: NodePort
#   ports:
#   - port: 8110
#     nodePort: 30030
#     name: eureka
#   selector:
#     app: eureka
# ---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    app: eureka
spec:
#  clusterIP: None
  ports:
  - port: 8110
    name: eureka
  selector:
    app: eureka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  serviceName: 'eureka'
  # n instances
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: 5927055/usm-discovery:bf062b1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8110
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1200Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8110
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8110
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
