backend-services/usm-notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usm-notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usm-notification
  template:
    metadata:
      labels:
        app: usm-notification
    spec:
      containers:
        - name: usm-notification-ctr
          image: 5927055/usm-notification:3659169
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8160
---
apiVersion: v1
kind: Service
metadata:
  name: usm-notification-service
spec:
  ports:
  - port: 80
    targetPort: 8160
  selector:
    app: usm-notification
