backend-services/usm-view.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usm-view
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usm-view
  template:
    metadata:
      labels:
        app: usm-view
    spec:
      containers:
        - name: usm-view-ctr
          image: 5927055/usm-view:24a29a2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8170
---
apiVersion: v1
kind: Service
metadata:
  name: usm-view-service
spec:
  ports:
  - port: 80
    targetPort: 8170
  selector:
    app: usm-view
